force-app/main/default/objects/MAR_MOR__c/MAR_MOR__c.object-meta.xml
<CustomObject>
    <label>MAR MOR</label>
    <nameField>
        <label>MAR MOR Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mars Mors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>