force-app/main/default/objects/MAR_MOR__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Mars Mors</relationshipLabel>
    <relationshipName>Mars_Mors</relationshipName>
    <type>Lookup</type>
</CustomField>