force-app/main/default/objects/MAR_MOR__c/fields/Administered_By__c.field-meta.xml
<CustomField>
    <fullName>Administered_By__c</fullName>
    <label>Administered By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>