force-app/main/default/objects/MAR_MOR__c/fields/Administered_Date__c.field-meta.xml
<CustomField>
    <fullName>Administered_Date__c</fullName>
    <label>Administered Date</label>
    <type>Date</type>
</CustomField>