force-app/main/default/objects/MAR_MOR__c/fields/Administration_Status__c.field-meta.xml
<CustomField>
    <fullName>Administration_Status__c</fullName>
    <label>Administration Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Taken</fullName>
            </value>
            <value>
                <fullName>Not taken</fullName>
            </value>
            <value>
                <fullName>Refused</fullName>
            </value>
            <value>
                <fullName>Refused &amp; Destroyed</fullName>
            </value>
            <value>
                <fullName>Not required</fullName>
            </value>
            <value>
                <fullName>Made available</fullName>
            </value>
            <value>
                <fullName>Hospitalized</fullName>
            </value>
            <value>
                <fullName>Social Leave</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>