force-app/main/default/objects/MAR_MOR__c/fields/Care_Episode__c.field-meta.xml
<CustomField>
    <fullName>Care_Episode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Care Episode</label>
    <referenceTo>Visits__c</referenceTo>
    <relationshipLabel>MAR/MOR</relationshipLabel>
    <relationshipName>Mars_Mors</relationshipName>
    <type>Lookup</type>
</CustomField>