force-app/main/default/objects/MAR_MOR__c/fields/Dosage_Time__c.field-meta.xml
<CustomField>
    <fullName>Dosage_Time__c</fullName>
    <label>Dosage Time</label>
    <type>DateTime</type>
</CustomField>