force-app/main/default/objects/MAR_MOR__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Frequency</label>
    <referenceTo>Frequency__c</referenceTo>
    <relationshipLabel>Mars Mors</relationshipLabel>
    <relationshipName>Mars_Mors</relationshipName>
    <type>Lookup</type>
</CustomField>