force-app/main/default/objects/MAR_MOR__c/fields/Index_Number__c.field-meta.xml
<CustomField>
    <fullName>Index_Number__c</fullName>
    <label>Index Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>