force-app/main/default/objects/MAR_MOR__c/fields/Medication_Name__c.field-meta.xml
<CustomField>
    <fullName>Medication_Name__c</fullName>
    <label>Medication Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>