force-app/main/default/objects/MAR_MOR__c/fields/Medication_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Medication_Quantity__c</fullName>
    <label>Medication Quantity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>