force-app/main/default/objects/MAR_MOR__c/fields/Vaccine_Route__c.field-meta.xml
<CustomField>
    <fullName>Vaccine_Route__c</fullName>
    <label>Vaccine Route</label>
    <length>255</length>
    <type>Text</type>
</CustomField>