force-app/main/default/objects/MAR_MOR__c/fields/Vaccine_Site__c.field-meta.xml
<CustomField>
    <fullName>Vaccine_Site__c</fullName>
    <label>Vaccine Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>