force-app/main/default/objects/MAR_MOR__c/fields/Was_Missed__c.field-meta.xml
<CustomField>
    <fullName>Was_Missed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Was Missed</label>
    <type>Checkbox</type>
</CustomField>